// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs should render default element 1`] = `
<injectIntl(Tabs)>
  <Tabs
    intl={
      {
        "$t": [Function],
        "defaultFormats": {},
        "defaultLocale": "en",
        "defaultRichTextElements": undefined,
        "fallbackOnEmptyString": true,
        "formatDate": [Function],
        "formatDateTimeRange": [Function],
        "formatDateToParts": [Function],
        "formatDisplayName": [Function],
        "formatList": [Function],
        "formatListToParts": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatNumberToParts": [Function],
        "formatPlural": [Function],
        "formatRelativeTime": [Function],
        "formatTime": [Function],
        "formatTimeToParts": [Function],
        "formats": {},
        "formatters": {
          "getDateTimeFormat": [Function],
          "getDisplayNames": [Function],
          "getListFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralRules": [Function],
          "getRelativeTimeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "onError": [Function],
        "onWarn": [Function],
        "textComponent": Symbol(react.fragment),
        "timeZone": undefined,
        "wrapRichTextChunksInFragment": undefined,
      }
    }
    navigationItems={[]}
    notifications={{}}
  >
    <Tab
      aria-hidden="true"
      isPlaceholder={true}
      tabKey=""
      text="W"
    >
      <div
        aria-hidden={true}
        aria-label="W"
        className="tab is-placeholder"
        data-focus-styles-enabled={true}
        onBlur={[Function]}
        onMouseDown={[Function]}
        role="link"
        tabIndex="0"
        type="button"
      >
        <div
          aria-hidden={true}
          className="tab-inner"
        >
          <span
            aria-hidden={true}
            className="tab-label"
          >
            W
          </span>
        </div>
      </div>
    </Tab>
  </Tabs>
</injectIntl(Tabs)>
`;

exports[`Tabs should render prop data 1`] = `
<injectIntl(Tabs)
  activeTabKey="my-test-key"
  navigationItems={
    [
      {
        "key": "my-test-key",
        "text": "test-text",
      },
    ]
  }
  navigationRenderFunction={
    [MockFunction] {
      "calls": [
        [
          {
            "hasCount": true,
            "isActive": true,
            "notificationCount": undefined,
            "text": "test-text",
          },
        ],
        [
          {
            "hasCount": true,
            "isActive": true,
            "notificationCount": undefined,
            "text": "test-text",
          },
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": undefined,
        },
        {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  notifications={
    {
      "myComponent": 3,
    }
  }
  onTabSelect={[MockFunction]}
>
  <Tabs
    activeTabKey="my-test-key"
    intl={
      {
        "$t": [Function],
        "defaultFormats": {},
        "defaultLocale": "en",
        "defaultRichTextElements": undefined,
        "fallbackOnEmptyString": true,
        "formatDate": [Function],
        "formatDateTimeRange": [Function],
        "formatDateToParts": [Function],
        "formatDisplayName": [Function],
        "formatList": [Function],
        "formatListToParts": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatNumberToParts": [Function],
        "formatPlural": [Function],
        "formatRelativeTime": [Function],
        "formatTime": [Function],
        "formatTimeToParts": [Function],
        "formats": {},
        "formatters": {
          "getDateTimeFormat": [Function],
          "getDisplayNames": [Function],
          "getListFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralRules": [Function],
          "getRelativeTimeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "onError": [Function],
        "onWarn": [Function],
        "textComponent": Symbol(react.fragment),
        "timeZone": undefined,
        "wrapRichTextChunksInFragment": undefined,
      }
    }
    navigationItems={
      [
        {
          "key": "my-test-key",
          "text": "test-text",
        },
      ]
    }
    navigationRenderFunction={
      [MockFunction] {
        "calls": [
          [
            {
              "hasCount": true,
              "isActive": true,
              "notificationCount": undefined,
              "text": "test-text",
            },
          ],
          [
            {
              "hasCount": true,
              "isActive": true,
              "notificationCount": undefined,
              "text": "test-text",
            },
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": undefined,
          },
          {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    notifications={
      {
        "myComponent": 3,
      }
    }
    onTabSelect={[MockFunction]}
  >
    <nav
      className="tabs-container is-calculating"
    >
      <Tab
        hasCount={true}
        isActive={true}
        key="my-test-key"
        onTabSelect={[Function]}
        render={
          [MockFunction] {
            "calls": [
              [
                {
                  "hasCount": true,
                  "isActive": true,
                  "notificationCount": undefined,
                  "text": "test-text",
                },
              ],
              [
                {
                  "hasCount": true,
                  "isActive": true,
                  "notificationCount": undefined,
                  "text": "test-text",
                },
              ],
            ],
            "results": [
              {
                "type": "return",
                "value": undefined,
              },
              {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        tabRef={
          {
            "current": <div
              aria-current="true"
              aria-label="test-text"
              class="tab is-disabled"
              data-focus-styles-enabled="true"
              role="link"
              tabindex="0"
              type="button"
            />,
          }
        }
        text="test-text"
      >
        <div
          aria-current={true}
          aria-label="test-text"
          className="tab is-disabled"
          data-focus-styles-enabled={true}
          onBlur={[Function]}
          onMouseDown={[Function]}
          role="link"
          tabIndex="0"
          type="button"
        />
      </Tab>
    </nav>
  </Tabs>
</injectIntl(Tabs)>
`;

exports[`Tabs should render with hasCount set to true when notifications are set to 0 1`] = `
<injectIntl(Tabs)
  activeTabKey="notification-test"
  navigationItems={
    [
      {
        "key": "notification-test",
        "text": "sample-text",
      },
    ]
  }
  navigationRenderFunction={
    [MockFunction] {
      "calls": [
        [
          {
            "hasCount": true,
            "isActive": true,
            "notificationCount": undefined,
            "text": "sample-text",
          },
        ],
        [
          {
            "hasCount": true,
            "isActive": true,
            "notificationCount": undefined,
            "text": "sample-text",
          },
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": undefined,
        },
        {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  notifications={
    {
      "myComponent": 0,
    }
  }
>
  <Tabs
    activeTabKey="notification-test"
    intl={
      {
        "$t": [Function],
        "defaultFormats": {},
        "defaultLocale": "en",
        "defaultRichTextElements": undefined,
        "fallbackOnEmptyString": true,
        "formatDate": [Function],
        "formatDateTimeRange": [Function],
        "formatDateToParts": [Function],
        "formatDisplayName": [Function],
        "formatList": [Function],
        "formatListToParts": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatNumberToParts": [Function],
        "formatPlural": [Function],
        "formatRelativeTime": [Function],
        "formatTime": [Function],
        "formatTimeToParts": [Function],
        "formats": {},
        "formatters": {
          "getDateTimeFormat": [Function],
          "getDisplayNames": [Function],
          "getListFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralRules": [Function],
          "getRelativeTimeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "onError": [Function],
        "onWarn": [Function],
        "textComponent": Symbol(react.fragment),
        "timeZone": undefined,
        "wrapRichTextChunksInFragment": undefined,
      }
    }
    navigationItems={
      [
        {
          "key": "notification-test",
          "text": "sample-text",
        },
      ]
    }
    navigationRenderFunction={
      [MockFunction] {
        "calls": [
          [
            {
              "hasCount": true,
              "isActive": true,
              "notificationCount": undefined,
              "text": "sample-text",
            },
          ],
          [
            {
              "hasCount": true,
              "isActive": true,
              "notificationCount": undefined,
              "text": "sample-text",
            },
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": undefined,
          },
          {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    notifications={
      {
        "myComponent": 0,
      }
    }
  >
    <nav
      className="tabs-container is-calculating"
    >
      <Tab
        hasCount={true}
        isActive={true}
        key="notification-test"
        onTabSelect={null}
        render={
          [MockFunction] {
            "calls": [
              [
                {
                  "hasCount": true,
                  "isActive": true,
                  "notificationCount": undefined,
                  "text": "sample-text",
                },
              ],
              [
                {
                  "hasCount": true,
                  "isActive": true,
                  "notificationCount": undefined,
                  "text": "sample-text",
                },
              ],
            ],
            "results": [
              {
                "type": "return",
                "value": undefined,
              },
              {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        tabRef={
          {
            "current": <div
              aria-current="true"
              aria-label="sample-text"
              class="tab is-disabled"
              data-focus-styles-enabled="true"
              role="link"
              tabindex="0"
              type="button"
            />,
          }
        }
        text="sample-text"
      >
        <div
          aria-current={true}
          aria-label="sample-text"
          className="tab is-disabled"
          data-focus-styles-enabled={true}
          onBlur={[Function]}
          onMouseDown={[Function]}
          role="link"
          tabIndex="0"
          type="button"
        />
      </Tab>
    </nav>
  </Tabs>
</injectIntl(Tabs)>
`;
